Git_WGBH_QC/src/objects/BequestContactRole__c.object
<CustomObject>
    <description>Relationship to Attorneys, Executors, ...</description>
    <fields>
        <fullName>Auto_Name__c</fullName>
        <formula>TEXT(Role__c) + &apos; - &apos; + Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Order__c</fullName>
        <description>The order of beneficiary&apos;s. 1st, 2nd, ...</description>
        <label>Beneficiary Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Planned Giving Contact Roles</relationshipLabel>
        <relationshipName>Planned_Giving_Contact_Roles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoTrustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bequest__c</fullName>
        <label>Planned Giving</label>
        <referenceTo>Bequest__c</referenceTo>
        <relationshipLabel>Planned Giving Contact Roles</relationshipLabel>
        <relationshipName>Planned_Giving_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Planned Giving Contact Role</label>
    <nameField>
        <label>Planned Giving Contact Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Giving Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>